# CobaltAPI

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Pipfile  README.md  config.example.json  pyproject.toml  run.py  settings.py
app/: __init__.py  functions.py  views.py
app/files/: facts.txt
cobaltapi/: __init__.py  functions.py
cobaltapi/routers/: __init__.py  eight_ball.py  facts.py  fun.py  image_macro.py  images.py  rand.py  strings.py
